# DoomFire

./: .clang-format  .gitignore  CMakeLists.txt  README.MD
extlibs/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
extlibs/imgui/examples/: imgui_impl_allegro5.cpp  imgui_impl_allegro5.h  imgui_impl_dx10.cpp  imgui_impl_dx10.h  imgui_impl_dx11.cpp  imgui_impl_dx11.h  imgui_impl_dx12.cpp  imgui_impl_dx12.h  imgui_impl_dx9.cpp  imgui_impl_dx9.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_glut.cpp  imgui_impl_glut.h  imgui_impl_marmalade.cpp  imgui_impl_marmalade.h  imgui_impl_metal.h  imgui_impl_metal.mm  imgui_impl_opengl2.cpp  imgui_impl_opengl2.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_osx.h  imgui_impl_osx.mm  imgui_impl_sdl.cpp  imgui_impl_sdl.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_impl_win32.cpp  imgui_impl_win32.h
extlibs/imgui/examples/example_allegro5/: main.cpp
extlibs/imgui/examples/example_apple_opengl2/: main.mm
extlibs/imgui/examples/example_emscripten/: Makefile  main.cpp  shell_minimal.html
extlibs/imgui/examples/example_glfw_metal/: Makefile  main.mm
extlibs/imgui/examples/example_glfw_opengl2/: Makefile  main.cpp
src/: Application.cpp  Application.h  Debug.h  DoomFireApplication.cpp  DoomFireApplication.h  RenderTarget.h  Shader.h  StopWatch.h  Texture.h  TimeSpan.cpp  TimeSpan.h  Util.cpp  Util.h  VertexArray.h  VertexBuffer.h  Window.cpp  Window.h  main.cpp
(+40 files in other folders)
